# autonomousIBP

./: .gitignore  CMakeLists.txt  README.md
cmake/: Dependencies.cmake
codex-skills/amflow-port-orchestrator/: SKILL.md
codex-skills/amflow-port-orchestrator/agents/: openai.yaml
codex-skills/amflow-port-orchestrator/references/: workflow.md
docs/: full-amflow-completion-roadmap.md  implementation-ledger.md  orchestration-workflow.md  parity-contract.md  public-contract.md  reference-harness.md  release-signoff-checklist.md  verification-strategy.md
include/amflow/core/: boundary_data.hpp  de_system.hpp  options.hpp  problem_spec.hpp
include/amflow/de/: eta_derivative_generation.hpp  eta_reduction_execution.hpp  eta_reduction_preparation.hpp  invariant_derivative_generation.hpp  reduction_assembly.hpp  (+7 more)
references/: INDEX.md  README.md  fetch_open_access.sh  manifest.csv
references/case-studies/: README.md  amflow-citations-openalex.tsv  selected-benchmarks.md
references/finite-fields/: README.md
references/ibp/: README.md
references/notes/: porting-roadmap.md  theory-gap-audit.md
references/theory/: README.md
specs/: amflow-prefactor-reference.yaml  kira-insert-prefactors-surface.yaml  parity-matrix.yaml  problem-spec.example.yaml  problem-spec.k0-smoke.yaml  reference-harness-manifest.yaml
src/cli/: main.cpp
src/core/: boundary_data.cpp  de_system.cpp  options.cpp  problem_spec.cpp
src/de/: eta_derivative_generation.cpp  eta_reduction_execution.cpp  eta_reduction_preparation.cpp  invariant_derivative_generation.cpp  invariant_reduction_execution.cpp  invariant_reduction_preparation.cpp  lightlike_linear_derivative_generation.cpp  lightlike_linear_derivative_reduction_execution.cpp  lightlike_linear_derivative_reduction_preparation.cpp  lightlike_linear_reduction_execution.cpp  lightlike_linear_reduction_preparation.cpp  reduction_assembly.cpp
src/io/: problem_spec_io.cpp  sample_data.cpp
src/kira/: kira_backend.cpp  kira_insert_prefactors.cpp
src/runtime/: artifact_store.cpp  auxiliary_family.cpp  boundary_generation.cpp  continuation_path.cpp  ending_scheme.cpp  eta_mode.cpp  physical_kinematics_guardrails.cpp
src/solver/: boundary_provider.cpp  boundary_request.cpp  coefficient_evaluator.cpp  precision_policy.cpp  series_solver.cpp  singular_point_analysis.cpp
tests/: amflow_tests.cpp
tools/reference-harness/: README.md
(+79 files in other folders)
